# layer-wise-integrated-gradients

./: .gitignore  CITATION.cff  Dockerfile  Dockerfile.cpu  LICENSE  MANIFEST.md  README.md  docker-compose.cpu.yml  docker-compose.yml  manifest.txt  pyproject.toml
.github/workflows/: pages.yml  publish-pypi.yml
docs/: DECODER_DESIGN.md  DOCKER.md  LIG_COMPUTATION.md  MODEL_BOUNDARIES.md  PYPI.md  REPRODUCTION.md  index.html  lig-hero.css  robots.txt  sitemap.xml
docs/execution/: UV_SETUP.md
docs/githubpage/: z2z_embed.html  z2z_token_contribution.html  z2z_token_contribution_sample_00016.html  z2z_token_contribution_sample_00410.html
examples/: detect_model_boundaries.py
examples/paper_demo/: DATA_NOTICE.md  README.md  manifest.json
lig/: __init__.py  adapter.py  api.py  boundaries.py  cli.py  config.py  encoder_access.py  publication.py
lig/adapters/: __init__.py  decoder.py  encoder.py  factory.py
lig/demo/: streamlit_app.py
lig/viz/: __init__.py  z2z_contribution.py
logo/: LIG-LOGO.ai
scripts/: build_demo_html.py  build_index_html.py  build_paper_demo.py  build_paper_demos.py  check_no_otb_in_release.py  export_paper_figures.py  publish_pypi.sh  run_regression_tests.sh  sync_from_monorepo.sh
scripts/ops/: README.md  detect_and_run_docker.sh  fix_cache_ownership.sh  monitor_layer_ig_zero_1700.sh  run_layer_ig_zero_1700.sh  run_layer_ig_zero_1700_tmux.sh  run_mlp_attitba0_1700_in_tmux.sh  run_mlp_attitba0_cache.sh  setup_hf_cache_env.sh  setup_uv_env.sh  start_hello_streamlit.sh  tunnel_from_mac.sh
scripts/reproduce/: compare_layer_vs_composed.py  compose_z2z.py  export_decomp_table.py  prepare_att_mlp.sh  run_layer_direct_ig.py
scripts/verify/: append_profile_results.py  monitor_lig_audit.sh  profile_layer_direct_ig.py  run_lig_audit.sh  validate_sample_00410_cache.py  verify_itb_raw_self_term_zero.py  verify_layer_ig_cache_completeness.py  verify_layer_ig_nonzero.sh  verify_mlp_attitb_zero_one_sample.py
test/: test_boundaries.py  test_encoder_models.py  test_itb_self_contrib.py  test_layer_contribution_theory.py  test_layer_direct_ig.py  test_layer_itb_zero_ratio.py  test_lig_api.py  test_publication.py
utils/: README_ig_calculations.md  __init__.py
utils/calculations/: README.md
utils/common/: __init__.py  bert_hooks.py  logging_setup.py  model_loader.py  (+1 more)
(+90 files in other folders)
